# motor-pool

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: agent.yaml  data_gen.yaml  eval.yaml  ingestion.yaml  retrieval.yaml  training.yaml
corpus/: download.py  manifest.yaml
data/: README.md
data/eval/: heldout_sections.json  heldout_v1.jsonl
docs/: v2-gui-vision.md
src/motor_pool/: __init__.py  cli.py  config.py  corpus.py  llm.py
src/motor_pool/agent/: __init__.py  build.py  interfaces.py  loop.py  planner.py  registry.py  tools.py
src/motor_pool/data_gen/: __init__.py  canonicalize.py  pipeline.py  question_sampler.py  teacher.py  validate.py
src/motor_pool/eval/: __init__.py  eval_set.py  judge.py  metrics.py  report.py  runner.py
src/motor_pool/inference/: __init__.py  grounded_model.py  prompt.py
src/motor_pool/ingestion/: __init__.py  chunker.py  ocr.py  pdf_text.py  pipeline.py  structure.py
src/motor_pool/retrieval/: __init__.py  bm25_index.py  embedder_bge.py  hybrid_retriever.py  interfaces.py  rrf.py  vector_store_numpy.py
src/motor_pool/schemas/: __init__.py  agent.py  answer.py  chunk.py  citation.py  datagen.py  eval.py  manifest.py  retrieval.py
src/motor_pool/training/: __init__.py  dataset.py  train.py
tests/: test_agent_loop.py  test_agent_planner.py  test_agent_tools.py  test_canonicalize.py  test_config.py  test_datagen.py  test_embedder.py  test_eval.py  test_eval_pipeline.py  test_ingestion.py  test_llm.py  test_retriever_contract.py  test_rrf.py  test_schemas.py  test_training.py  test_validate.py
