[project]
name = "motor-pool"
version = "0.1.0"
description = "Grounded diagnostic assistant over public-domain vehicle technical manuals"
readme = "README.md"
# Core and Phases 0-5 run on 3.11+. The `train` extra (Unsloth/torch/bitsandbytes)
# is the component with a narrower interpreter range; that ceiling is pinned at
# Phase 6 when those versions are finalized, not imposed on the whole project here.
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "tirving" }]

# Core deps only. These are light and always installed.
# Heavy and phase-specific deps live in optional groups below and are installed
# per phase (ingest at Phase 1, retrieve at Phase 2, train at Phase 6, ...).
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Phase 1: born-digital PDF extraction.
ingest = ["pymupdf>=1.24"]
# Phase 1 fallback only (expected no-op for the -280 TMs, which are born-digital).
ocr = ["ocrmypdf>=16", "pytesseract>=0.3.10"]
# Phase 2: lexical + dense retrieval.
retrieve = ["bm25s>=0.2", "sentence-transformers>=3.0"]
# Phase 5/4: distillation teacher + judge clients (provider SDK finalized at Phase 5).
datagen = ["httpx>=0.27"]
eval = ["httpx>=0.27"]
# Phase 6: QLoRA stack. Pins are loose here and finalized against the 4080 at Phase 6.
train = [
    "unsloth",
    "peft>=0.12",
    "bitsandbytes>=0.43",
    "trl>=0.9",
    "transformers>=4.44",
    "datasets>=2.20",
    "accelerate>=0.33",
    "torch>=2.3",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
motor-pool = "motor_pool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/motor_pool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
